@@ -73,6 +73,7 @@ graphics/powerUpHeatSeek.tga \
 graphics/powerUpBulletDistance.tga \
 graphics/powerUpBounce.tga \
 graphics/powerUpCornering.tga \
+graphics/powerUpSticky.tga \
 graphics/powerUpExplode.tga \
 graphics/bullet1.tga \
 graphics/bullet2.tga \
